<resources>
    <string name="app_name">Paper Battleship</string>
    <string name="host_game">Host game</string>
    <string name="join_game">Join game</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="title_change_language_dialog">Change Language</string>
    <string name="save_lable">Save</string>
    <string name="cancel_lable">Cancel</string>
    <string name="alert_message_dialog">If you change language. The game would go back to main screen.</string>
    <string name="item_tab_name">Item</string>
    <string name="skin_tab_name">Skin/Background</string>
    <string name="battle_history_tab_name">Battle history</string>
    <string name="skill_lvl1">Unlock the first spell box.</string>
    <string name="skill_lvl2">Create fog for 1 cell. Fog makes the enemy does not know the outcome of the bullet just shot. The fog will automatically clear after being shot.</string>
    <string name="skill_lvl3">Incidentally shoot 1 more cell.</string>
    <string name="skill_lvl4">If the enemy hits the bomb, the opponent is hit in the same box again.</string>
    <string name="skill_lvl5">Prohibit the opponent from shooting 1 time.</string>
    <string name="skill_lvl6">Lets protect 1 box from bullets.</string>
    <string name="skill_lvl7">Unlock lava wallpaper.</string>
    <string name="skill_lvl8">Unlock the set of spaceship ships.</string>
    <string name="skill_lvl9">Scan a box to see if there is an object in it.</string>
    <string name="skill_lvl10">Unlock 2nd spell box.</string>
    <string name="skill_lvl11">Allows players to move any ship to a random position (mandatory ship has not been shot).</string>
    <string name="skill_lvl12">Lets protect 9 cells from 1 shot. It only takes 1 hit to cover all 9 cells.</string>
    <string name="skill_lvl13">Scan 9 boxes (cross) to see if there are any objects there. If 9 items have at least 1 item, the radar returns a YES signal.</string>
    <string name="skill_lvl14">Ship 4 drops the aircraft, allowing the player to drop bombs (the remaining ship number of ships 4 minus 1) the option box. After using the spell, the head of ship 4 will explode.</string>
    <string name="skill_lvl15">Repair 1 box of the ship (does not apply to ships that have been completely destroyed.</string>
    <string name="skill_lvl16">You can shoot consecutively if your shot hits an enemy ship.</string>
    <string name="skill_lvl17">Put bomb on a ship, When that ship is hit, the whole ship will explode (ship 4 will explode even hit only 1 umbrella) but in return will explode an area corresponding to the ship.</string>
    <string name="skill_lvl18">Unlock dead sea wallpaper.</string>
    <string name="skill_lvl19">Get at random 1 enemy spell possessing.</string>
    <string name="skill_lvl20">Unlock 3rd spell box.</string>
    <string name="skill_lvl21">Unlock monster-shaped ship sets.</string>
    <string name="skill_lvl22">Doubled exp received at the end of the match. If in the battle using this spell, nothing happens.</string>
    <string name="skill_lvl23">Hit an object with an object on the map, piercing through both shield and fog. Using this spell will end the turn.</string>
    <string name="skill_lvl24">Sacrifice your own ship to destroy similar ships on the enemy side.</string>
    <string name="skill_lvl25">Shot 5 cells vertically (center is selected).</string>
    <string name="skill_lvl26">Revive the ship at another random location.</string>
    <string name="skill_lvl27">Using this spell will allow you to use 3 random spells (of unlocked spells) in 3 random locations.</string>
    <string name="skill_lvl28">Unlock cosmic wallpaper.</string>
    <string name="skill_lvl29">Explode everything on an optional row.</string>
    <string name="skill_lvl30">Unlock add 1 more battleship.</string>
    <string name="unreached_skill">Reach the level to get the item.</string>
    <string name="skin_ship_text">Skin ship</string>
    <string name="background_text">Background</string>
    <string name="win_text">WIN</string>
    <string name="lose_text">LOSE</string>
    <string name="OK_text">OK</string>
    <string name="time_lable">Time:</string>
    <string name="receive_exp_lable">Receive Experiment:</string>
    <string name="exp_text">Exp</string>
    <string name="done_text">DONE</string>
    <string name="request_input_name">Please input your name.</string>
    <string name="alert_name">Your name can not be null and can not over 20 character.</string>
    <string name="host_online_game_text">Host online game</string>
    <string name="practice_with_bot_text">Practice with bot</string>
    <string name="back_text">Back</string>
    <string name="join_text">Join</string>
    <string name="prepare_for_battle_text">Prepare For Battle!</string>
    <string name="rotate_text">Rotate</string>
    <string name="reset_location_text">Reset Location</string>
    <string name="time_remaining_text">Time remaining</string>
    <string name="ready_text">Ready</string>
    <string name="enemy_spotted">The enemy is spotted. Ready to fight!</string>
    <string name="no_enemy">There is no enemy around you!</string>
    <string name="continue_find">Continue finding!</string>
    <string name="find_enemy">Looking for enemy around you.</string>
    <string name="your_turn">Your turn</string>
    <string name="enemy_turn">Enemy turn</string>
    <string name="enemy_map">Enemy map</string>
    <string name="your_map">Your map</string>
    <string name="spell_text">Spell</string>
    <string name="surrender_text">Surrender</string>
    <string name="menu_text">Menu</string>
    <string name="back_to_main_menu_text">Back to main menu</string>
    <string name="you_win_text">You win</string>
    <string name="you_loose_text">You lose</string>
    <string name="unlock_text">Unlock</string>
    <string name="lv_text">Lv</string>
    <string name="main_menu_text">Main menu</string>
    <string name="start_text">Start game</string>

</resources>
