<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:weightSum="10"
    android:padding="10dp"
    android:background="#000000"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#00FFFF"
        android:text="@string/title_change_language_dialog"
        android:background="@drawable/border_bottom"
        android:id="@+id/txtHeaderDialogChangeLanguage"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/groupRadioLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_message_dialog"
        android:textColor="#ffffff"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="@drawable/border_top">
        <Button
            android:id="@+id/btnSaveLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="5"
            android:text="@string/save_lable"/>

        <Button
            android:id="@+id/btnCancelChangeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="5"
            android:text="@string/cancel_lable"/>

    </LinearLayout>

</LinearLayout>