<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_weight="4"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="8"
            android:weightSum="10">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2"
            android:weightSum="10">

            <Button
                android:id="@+id/btnHost"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/main_background_button"
                android:scaleType = "centerCrop"
                android:text="@string/host_game">

            </Button>

            <Button
                android:id="@+id/btnJoin"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:text="@string/join_game"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/main_background_button"
                android:scaleType = "centerCrop">

            </Button>

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:text="@string/profile"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/main_background_button"
                android:scaleType = "centerCrop">

            </Button>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:text="@string/exit"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/main_background_button"
                android:scaleType = "centerCrop">

            </Button>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>