<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".InGameActivity">

    <TextView
        android:id="@+id/textViewTurn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textSize="25sp"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.7" />

                <FrameLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.3">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btnEnemyMap"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:onClick="tabHandler"
                            android:textSize="10sp"
                            android:text="@string/enemy_map" />

                        <Button
                            android:id="@+id/btnYourMap"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:onClick="tabHandler"
                            android:text="@string/your_map" />

                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/spell_text"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:gravity="center"/>

                        <ImageView
                            android:id="@+id/imgSpell1"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_lock" />

                        <ImageView
                            android:id="@+id/imgSpell2"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_lock" />

                        <ImageView
                            android:id="@+id/imgSpell3"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_lock" />
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </TabHost>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:weightSum="10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:layout_weight="4"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/time_remaining_text"/>
            <TextView
                android:id="@+id/textViewCountdownTurn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="60"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:layout_weight="6"
            android:gravity="right"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSur"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="10sp"
                android:layout_margin="8dp"
                android:layout_weight="4"
                android:text="@string/surrender_text"/>

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="4"
                android:textSize="10sp"
                android:text="@string/menu_text"/>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>